--- a/styles.css
+++ b/styles.css
@@ -342,7 +342,7 @@
  }
 
  .markets a:hover {
-     transform: scale(1.05) rotate(1deg);
+     transform: scale(1.05);
      transition: transform 0.5s ease;
      box-shadow: 0 0 25px rgba(0, 255, 0, 0.099);
      opacity: 1;
