--- a/styles.css
+++ b/styles.css
@@ -370,8 +370,8 @@
      color: #ccc;
      font-size: 15px;
      line-height: 1.6;
-     margin: 10px 0
-     text-align: justify;
+     margin: 20;
+     text-align: justify
  }
 
  .creator a {
