--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,7 @@
      color: #ccc;
      font-size: 15px;
      line-height: 1.6;
-     margin: 20;
+     margin: 20px;
      text-align: justify
  }
 
